Supernova/Samples/Errors/GeneralSyntaxError.nova
Application title = Error.

I want window and window title = Error.

what